alignment issue fixed

--- a/app/SignUp/SignUp.css
+++ b/app/SignUp/SignUp.css
@@ -78,11 +78,14 @@ input {
 }
  
 .Pwdconditions {
-  margin-top: 0px;
+  margin-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 20px;
   margin-left: -25px;
-  font-size: xx-small; /* Set the font size to xx-small */
+  font-size: 14px; /* Set the font size to xx-small */
+  line-height: 20px;
 }
+
  
 .forgot-password {
   margin-bottom: 1rem;
@@ -196,9 +199,16 @@ input {
 }
  
 .consent-checkbox-wrapper {
-  margin: 0;
+  margin: 10px;
   display: flex;
+  position: relative  ;
+  left:1vw;
   align-items: flex-start; /* Change from center to flex-start */
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+  max-width: 100%; /* Ensure labels take full width */
 }
  
 .consent-checkbox-wrapper input[type="checkbox"] {
@@ -207,8 +217,3 @@ input {
   margin-right: -135px; /* Add a small margin to separate checkbox from text */
 }
  
-.consent-checkbox-wrapper label {
-  margin: 0;
-  display: inline-block;
-  vertical-align: top; /* Align text to the top of the checkbox */
-}
